<resources>
    <string name="app_name">ProjektPZ</string>
    <string name="action_settings">Settings</string>
    <string name="weapon_name_hint">Nazwa broni</string>
    <string name="weapon_caliber_hint">Kaliber:</string>
    <string name="button_save">Zapisz</string>
    <string name="button_delete_weapon">Usuń broń</string>
    <string name="empty_not_saved">Broń nie zapisana bo nie wypełniono wszystkich pól.</string>
    <string name="add_weapon_title">Dodawanie nowej broni</string>
    <string name="main_menu_weapons">Wyświetl bronie</string>
    <string name="main_menu_reservations">Wyświetl rezerwacje</string>
    <string name="main_menu_calibers">Wyświetl kalibry</string>
    <string name="main_menu_tracks">Wyświetl tory</string>
    <string name="weapon_price_for_shoot">Cena za strzał:</string>
    <string name="bro_kaliber_cena_strza">Broń: kaliber: cena/strzał:</string>
    <string name="nazwa">Nazwa:</string>
    <string name="reservation_name">Imie</string>
    <string name="reservation_surname">Nazwisko</string>
    <string name="reservation_start">Data rezerwacji</string>
    <string name="reservation_save_button">Zapisz rezerwacje</string>
    <string name="reservation_numberOfHours">Liczba godzin</string>
    <string name="reservation_hour">Dostępne godziny:</string>
    <string name="reservation_item_track_hint">Tor:</string>
    <string name="reservation_item_name_hint">Imię</string>
    <string name="reservation_item_cancel_button_hint">Usuń</string>
    <string name="reservation_item_surname_hint">Nazwisko</string>
    <string name="reservation_item_start_hint">Godzina startu</string>
    <string name="reservation_item_end_hint">Godzina końca</string>
    <string name="reservation_list_date_hint">Rezerwacje z dnia</string>
    <string name="reservation_list_date_button_hint">Zmień date</string>
    <string name="caliber_button_delete">Usuń kaliber</string>
    <string name="caliber_add_hint">Nazwa kalibru</string>
    <string name="caliber_add_cancel">Anuluj</string>
    <string name="caliber_add_confirm">Dodaj</string>
    <string name="caliber_add_title">Dodawanie nowego kalibru</string>
    <string name="track_item_name_hint">Nazwa toru</string>
    <string name="track_item_length_hint">Długość toru</string>
    <string name="delete_hint">Usuń</string>
    <string name="edit_hint">Edytuj</string>
    <string name="edytuj">Edytuj</string>
</resources>
