<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/weapons_menu_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_menu_weapons" />

    <Button
        android:id="@+id/reservations_menu_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_menu_reservations" />

    <Button
        android:id="@+id/calibers_menu_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_menu_calibers" />
</LinearLayout>