<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="215dp"
                android:layout_height="wrap_content"
                android:text="@string/reservation_name" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reservation_surname" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/reservation_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Imie" />

            <EditText
                android:id="@+id/reservation_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Nazwisko"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reservation_numberOfHours" />

    <Spinner
        android:id="@+id/reservationLength"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reservation_start"
        android:visibility="visible" />

    <CalendarView
        android:id="@+id/reservation_start"
        android:layout_width="match_parent"
        android:layout_height="290dp"
        android:firstDayOfWeek="2"
        android:maxDate="01/01/2021"
        android:minDate="01/01/2020" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reservation_hour" />

    <Spinner
        android:id="@+id/reservationHour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/reservation_save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reservation_save_button" />

</LinearLayout>